@@ -20,6 +20,7 @@
   <Button
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:text="@string/OK"
     android:id="@+id/btnMOK"
      />
 </LinearLayout>
