@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	<TextView android:layout_width="fill_parent"
+	android:layout_width="wrap_content"
+	android:layout_height="fill_parent"
+	>
+	<LinearLayout 
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:text="My Progress Bar" />
+		>
+		<TextView android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:lines="1"
+			android:id="@+id/ProgressTitle"
+			android:text="My Progress Bar"
+			/>
+		</LinearLayout>
+	<LinearLayout 
+		android:orientation="vertical"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		>
 	<ProgressBar
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -16,9 +31,16 @@
 		style="?android:attr/progressBarStyleHorizontal"
 		android:id="@+id/progressbar_Horizontal"
 		android:max="100" />
+	</LinearLayout>
+		<LinearLayout 
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		>
 	<TextView android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="Processing file: ..."
 		android:id="@+id/ProgressTable"
 		/>
+	</LinearLayout>
 </LinearLayout>
